[project]
name = "toolbox"
version = "0.1.0"
description = "General purpose functions/utils to make life easier."
authors = [
    { name = "Victoria Cheung", email = "vcheung@revmed.com" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "pathlib>=1.0.1",
    "plotnine>=0.14.5",
    "pycomplexheatmap>=1.8.2",
    "pytest>=8.4.0",
    "rpy2>=3.6.1",
    "ruff>=0.11.13",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "statannotations>=0.7.2",
    "umap>=0.1.1",
]


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
